# ReMind

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  webui.py
remind/: exceptions.py  prompter.py
remind/database/: mongodb.py
remind/domain/: base.py  models.py  notes.py  quiz.py  transformation.py
remind/graphs/: ask.py  hint.py  judge.py  note_to_transcript.py  quiz.py  title.py  topics.py  transformation.py  utils.py
remind/models/: __init__.py  embedding_models.py  speech_to_text_models.py  text_to_speech_models.py  vision_models.py
remind/models/chatterbox/: tts.py  vc.py
remind/process_content/: file_to_text.py  get_quiz.py  text_to_speech.py  upload_image.py  url_to_text.py  youtube_to_text.py
remind/prompts/: image_description.jinja  note_to_transcript.jinja  title.jinja  topics.jinja
remind/prompts/ask/: entry.jinja  final_answer.jinja  query_process.jinja
remind/prompts/quiz/: give_hint.jinja  judge_answer.jinja  qa_json_convert.jinja  question_ans_raw.jinja
remind/webui/: ui.py
remind/webui/components/: markdown_latex_render.py  model_selector.py
remind/webui/tabs/: ask.py  calendar.py  models.py  quiz.py  transformations.py  upload.py
